class ManipuladorDeTributaveis:
    def calcular_imposto(TributavelMixIn):
        pass