import abc

class TributavelMixIn(abc.ABC):
    def valor_imposto():
        pass